[brown] 2차 반영